rename of docker containers requires update in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,13 @@ before_install:
     - make test-environment
     - docker ps
     - docker logs zookeeper
-    - docker logs mesos-master
-    - docker logs mesos-slave
+    - docker logs mesos_master
+    - docker logs mesos_slave
 
 after_script:
     - docker ps
     - docker logs zookeeper
-    - docker logs mesos-master
-    - docker logs mesos-slave
+    - docker logs mesos_master
+    - docker logs mesos_slave
 
 
