--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ services:
     - docker
 
 before_install:
+    - sudo apt-get -o Dpkg::Options::="--force-confnew" install -y --force-yes docker-engine=1.11.2-0~trusty
     - make test-environment
     - docker ps
     - docker logs zookeeper
